Add a missing article to best of '22 list

--- a/_posts/2022-12-31-the-best-of-2022.md
+++ b/_posts/2022-12-31-the-best-of-2022.md
@@ -18,6 +18,7 @@ My favorite discoveries from the past year.
 * [The Perils of Audience Capture](https://gurwinder.substack.com/p/the-perils-of-audience-capture)
 * [Crystal Meth Was a Key Part of Nazi Military Strategy](https://time.com/5752114/nazi-military-drugs/)
 * [America's Most Remarkable Kid Died in New Castle, Utah](https://www.deseret.com/2022/8/22/23309244/cole-summers-died-newcastle-utah-warren-buffett-charlie-munger-bari-weiss-unschooled)
+* [The Grand Unified Theory of Product Ideation](https://jakobgreenfeld.com/gut)
 
 ### Podcasts
 * [Peter Attia Interviewing Ryan Hall](https://podcasts.apple.com/us/podcast/running-overcoming-challenges-and-finding-success/id1400828889?i=1000553920172)
