Small tweaks to 2023 best of post

--- a/_posts/2023-12-31-the-best-of-2023.md
+++ b/_posts/2023-12-31-the-best-of-2023.md
@@ -4,6 +4,8 @@ tags: best-of
 excerpt: "My favorite discoveries from the past year."
 ---
 
+My favorite discoveries from 2023.
+
 ### Purchases
 1. [Charmander Community Day, Pokemon
    GO](https://www.pokemon.com/us/pokemon-news/pokemon-go-september-2023-community-day-classic-features-charmander)
@@ -11,7 +13,7 @@ excerpt: "My favorite discoveries from the past year."
 participate in this 3 hour ([mobile game](https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo)) event.
 My kids and I went to a park on a beautiful day. We all had a blast. No one fought. My wife got a break. Just a win all around.
 1. [CEP compression socks](https://www.amazon.com/gp/product/B086LHC6KL/)
-  * I did not realize how bad the circulation in my legs was until I got compression socks. I can now stand for hours without my legs getting tired. Game changer.
+  * I did not realize how bad the circulation in my legs was until I got compression socks. I can now be on my feet for hours without my legs getting tired. Game changer.
 1. [Folding step stool](https://www.amazon.com/gp/product/B08P75D3LF)
   * In a small house with small children, this is amazing.
 1. [Running hydration
@@ -37,13 +39,12 @@ My kids and I went to a park on a beautiful day. We all had a blast. No one foug
    book I've recommended to many of my friends](https://www.audible.com/pd/Four-Thousand-Weeks-Audiobook/1250834384)
 1. [Little Drummer Girl (spy
    fiction)](https://www.audible.com/pd/The-Little-Drummer-Girl-Audiobook/B008KPJCSS)
-1. [Checklist
-   Manifesto](https://www.audible.com/pd/The-Checklist-Manifesto-Audiobook/B0030ZYDD2)
+1. [Book that convinced me to start making checklists for a lot of things I do](https://www.audible.com/pd/The-Checklist-Manifesto-Audiobook/B0030ZYDD2)
 
 ### Movies
 1. [Vengeance](https://www.amazon.com/Vengeance-B-J-Novak/dp/B0B8NHM82F/)
   * Equal parts hilarious, insightful, and heart-breaking. I re-watched this as soon as
-I finished it. Excellent writing.
+I finished it. Excellent writing by B.J. Novak (of The Office).
 1. [Tinker Tailor Soldier
    Spy](https://www.amazon.com/Tinker-Tailor-Soldier-Gary-Oldman/dp/B009CGD4S8)
   * Super understated and clever spy story. An amazing adaptation.
@@ -105,4 +106,3 @@ off.
    am), reduces my deep sleep by 30-50%.
 1. Exercising shortly after eating leads to crashing because muscles draw glucose via an [insulin-independent mechanism during exercise](https://pubmed.ncbi.nlm.nih.gov/23899560/).
 1. Tylenol before bed on nights after hard workouts increases my deep sleep by up to 100%.
-1. Limiting evening water consumption to 2 glasses eliminated waking up to use the bathroom.
