Add missing podcast to 2023 list

--- a/_posts/2023-12-31-the-best-of-2023.md
+++ b/_posts/2023-12-31-the-best-of-2023.md
@@ -82,7 +82,11 @@ I finished it. Excellent writing by B.J. Novak (of The Office).
   * The best start-up content I listened to all year.
 1. [EconTalk: Tyler Cowen on AI
    Risks](https://www.econtalk.org/tyler-cowen-on-the-risks-and-impact-of-artificial-intelligence/)
-  * Subtle, skeptical, clever. A well-grounded conversation about AI risks.
+  * Subtle, skeptical, clever. A (rare) well-grounded conversation about AI risks.
+1. [America's Hidden
+   Duopoly](https://freakonomics.com/podcast/americas-hidden-duopoly-2/)
+  * How the two-party political system in the US stifles competition and
+    ensures everyone is dissatisfied. Also some interesting ways to fix it.
 
 ### Music
 1. [Shearwater - Animal Joy](https://music.amazon.com/albums/B0073ASA7A)
