Add Patricia Snow posts to best-of

--- a/_posts/2024-12-31-the-best-of-2024.md
+++ b/_posts/2024-12-31-the-best-of-2024.md
@@ -34,6 +34,9 @@ Previous best-of posts are [available here](/tags/#best-of).
 - [Recent studies show that saturated fat does not cause heart disease and a group of well-placed individuals don't want people to know](https://journals.lww.com/co-endocrinology/fulltext/2023/02000/a_short_history_of_saturated_fat__the_making_and.10.aspx) (h/t Matt D)
 - [Pixar's rules for storytelling](https://web.archive.org/web/20120601043826/http://www.pixartouchbook.com/blog/2011/5/15/pixar-story-rules-one-version.html)
 - [Norman Borlaug, the man that saved 1 Billion lives](https://en.wikipedia.org/wiki/Norman_Borlaug)
+- [Patricia Snow's conversion
+  story, Part I](https://www.firstthings.com/article/2019/01/grace) and [Part
+II](https://www.firstthings.com/article/2019/06/grace-continued) (h/t John S.)
 - [It is not human nature to invent, entire societies were bad at it, it has to be learned](https://medium.com/@antonhowes/is-innovation-in-human-nature-48c2578e27ba)
 - [You don't have to solve hard problems (to do good and be fulfilled)](https://www.benkuhn.net/hard/)
 - [Postmortem on a beloved product, Triplebyte](https://www.otherbranch.com/blog/why-triplebyte-failed) (h/t Liam M)
@@ -81,7 +84,7 @@ Previous best-of posts are [available here](/tags/#best-of).
 
 ### Podcasts
 - [All-In on Ohalo](https://youtu.be/vDr1983LIuo?feature=shared&t=2423)
-  - Most impressive product pitch I think I've ever heard (link to exact section)
+  - Most exciting product pitch I think I've ever heard (link to exact section)
 - [Peter Attia on Rucking](https://open.spotify.com/episode/5XeJSgThMQK8yPz81VyVdx)
   - What it’s actually like to go through Special Forces training. Why it’s hard when you leave a Special Forces team. Starting a business after. Just a really interesting story.
 - [Jordan Jonas on Lex Friedman](https://lexfridman.com/jordan-jonas/)
