Don't contradict yourself

--- a/_posts/2025-04-25-ankritic.md
+++ b/_posts/2025-04-25-ankritic.md
@@ -42,7 +42,7 @@ I know I’m not alone in this. In the extreme example: people give themselves i
 
 Because of this, there is a whole literature on “sleep efforts” and how they cause or exacerbate insomnia, e.g. \[[0](https://doi.org/10.1016/S0005-7967\(01\)00061-4)], \[[1](https://pmc.ncbi.nlm.nih.gov/articles/PMC11577993/)], \[[2](https://doi.org/10.1016/j.smrv.2006.03.002)].
 
-This is the practical side of Schopenhauer’s Dilemma. For this problem, there’s a class of activities better than atelic activities. They are activities for which there is simply no point in judging oneself. Examples include: taking a shower, watching a movie, reading fiction, listening to a song, reading the news, drinking an old fashioned, sitting in the sun, etc.
+This is the practical side of Schopenhauer’s Dilemma. For this problem, there’s a class of activities better than atelic activities. They are activities for which there is simply no point in judging oneself. Examples include: taking a shower, watching a movie, reading fiction, reading the news, drinking an old fashioned, sitting in the sun, etc.
 
 Since we’re giving things Geek names, let’s call these _ankritic activities_ (from the Greek "an-" meaning "without" and "krisis" meaning "judgment").
 
