Add missing hat-tips to 2025 Best Of post

--- a/_posts/2025-12-31-the-best-of-2025.md
+++ b/_posts/2025-12-31-the-best-of-2025.md
@@ -24,7 +24,7 @@ My favorite discoveries from 2025. Previous best-of posts are [available here](/
 - [Soundcore A40 headphones](https://www.amazon.com/dp/B0B1LVC5VZ)
   - My fifth and favorite pair of earbuds. So cheap, so much better than [the Wirecutter budget recommendation](https://www.amazon.com/EarFun-Free-2S-Customizable-Waterproof/dp/B0CJM5F4QX), batteries last forever (1 charge per month with daily use), they connect to multiple devices. My only complaint is that they don’t have many controls. I will be buying these again and again.
 - [Preventative Cardiologist](https://www.pennmedicine.org/specialties/primary-cardiology/preventative-cardiovascular-care)
-  - Did you know that they made these? Cardiologists that try to _prevent_ cardiovascular disease before it gets going. I had to wait 4-5mo to get an appointment, but it was well worth it!
+  - Did you know that they made these? Cardiologists that try to _prevent_ cardiovascular disease before it gets going. I had to wait 4-5mo to get an appointment, but it was well worth it! H/t John B. and Sarah V.
 - [Olive oil sprayer](https://www.amazon.com/dp/B0CJF94M8J)
   - I basically hate everything about canned spray oils: the cost, the waste of a can, the crappy oil inside, the dimethyl silicone they all contain, etc. But I’ve always thought there was no other option. This sprayer completely eliminates the need for the cans. It lets me use high quality olive oil with no gross additives. I use this every single day.
 
@@ -92,7 +92,7 @@ My favorite discoveries from 2025. Previous best-of posts are [available here](/
 - You can [become a human diff checker](https://danielwirtz.com/blog/spot-the-difference-superpower) by going cross-eyed
 - [Large language models can pass biases to one another (e.g. love of owls) through seemingly undetectable information (e.g. strings of digits)](https://arxiv.org/abs/2507.14805)
 - [In 1967, Tom Simpson’s heart stopped while climbing Mt. Ventoux during a stage of the Tour de France because he was sick, had taken amphetamines, and put brandy in his water bottle](https://en.wikipedia.org/wiki/Death_of_Tom_Simpson)
-- There’s an [annual award for incredibly esoteric and often hilarious scientific studies](http://improbable.com/ig/winners). BF Skinner training pigeons to guide missiles was a standout
+- There’s an [annual award for incredibly esoteric and often hilarious scientific studies](http://improbable.com/ig/winners). BF Skinner training pigeons to guide missiles was a standout. H/t Arda P.
 - For fun (?), a guy had highly venomous snakes (mambas, rattlesnakes, cobras, etc) bite him 756 times over a span of 18 years (roughly once a week). Over time, [his body created a generic anit-venom antibody](https://www.biorxiv.org/content/10.1101/2022.09.26.507364v2.full) that could be used to save 100k+ lives a year. H/t Shaun P
 - [Woodworking predates humans](https://www.nature.com/articles/s41586-023-06557-9)
 - [Really, really absurdly detailed secular investigation of the sun miracle at Fatima](https://www.astralcodexten.com/p/the-fatima-sun-miracle-much-more)
